// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EffectiveRolesList/> multiple roles 1`] = `
[
  <hr
    className="principal-hr"
  />,
  <div
    className="row"
  >
    <div
      className="principal-detail-label col-xs-4"
    >
      Permissions
    </div>
    <div
      className="principal-detail-value col-xs-8"
    >
      <ul
        className="principal-detail-ul"
      >
        <li
          className="principal-detail-li"
        >
          Editor
        </li>
        <li
          className="principal-detail-li"
        >
          Folder Administrator
        </li>
        <li
          className="principal-detail-li"
        >
          Project Administrator
        </li>
        <li
          className="principal-detail-li"
        >
          Reader
        </li>
        <li
          className="principal-detail-li"
        >
          Restricted Reader
        </li>
        <li
          className="principal-detail-li"
        >
          Submitter
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`<EffectiveRolesList/> no roles 1`] = `null`;

exports[`<EffectiveRolesList/> single role 1`] = `
[
  <hr
    className="principal-hr"
  />,
  <div
    className="row"
  >
    <div
      className="principal-detail-label col-xs-4"
    >
      Permissions
    </div>
    <div
      className="principal-detail-value col-xs-8"
    >
      <ul
        className="principal-detail-ul"
      >
        <li
          className="principal-detail-li"
        >
          Editor
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`<EffectiveRolesList/> with root policy 1`] = `
[
  <hr
    className="principal-hr"
  />,
  <div
    className="row"
  >
    <div
      className="principal-detail-label col-xs-4"
    >
      Permissions
    </div>
    <div
      className="principal-detail-value col-xs-8"
    >
      <ul
        className="principal-detail-ul"
      >
        <li
          className="principal-detail-li"
        >
          Editor
        </li>
        <li
          className="principal-detail-li"
        >
          Folder Administrator
        </li>
        <li
          className="principal-detail-li"
        >
          Project Administrator
        </li>
        <li
          className="principal-detail-li"
        >
          Reader
        </li>
        <li
          className="principal-detail-li"
        >
          Restricted Reader
        </li>
        <li
          className="principal-detail-li"
        >
          Submitter
        </li>
        <li
          className="principal-detail-li"
        >
          Application Admin
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`<EffectiveRolesList/> without policy 1`] = `null`;
